# pkg/docs/swagger.json
@@ -57,7 +57,7 @@
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"Could not get events\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -96,19 +96,19 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "{\"error\": \"Could not create Event\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "{\"error\": \"Could not create Event\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -138,13 +138,13 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"Event not found\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -171,13 +171,13 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"Event not found\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -202,25 +202,25 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "{\"error\": \"Event could not be updated with provided data\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"Event not found\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "{\"error\": \"Could not update Event\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -239,25 +239,25 @@
                 "operationId": "delete-event-by-id",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "{\"message\": \"Event deleted\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"Event not found!\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "{\"error\": \"Could not create Event\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -287,13 +287,13 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"Event not found\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -319,26 +319,14 @@
                             "$ref": "#/definitions/models.Event"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                        "description": "{\"error\": \"Tickets not found\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -404,19 +392,19 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"User not found\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "{\"error\": \"Could not create Ticket\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -435,25 +423,25 @@
                 "operationId": "delete-tickets-by-user-id",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "{\"message\": \"Ticket deleted\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"Tickets not found\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "{\"error\": \"Could not parse time\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -480,13 +468,13 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"User not found\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -525,13 +513,13 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"User not found\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -550,19 +538,19 @@
                 "operationId": "delete-user-by-id",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "{\"message\": \"User deleted\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\":\"Unauthorized for this route\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\": \"User not found\"}",
                         "schema": {
                             "type": "string"
                         }
@@ -600,25 +588,25 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "{\"error\": \"Could not create Token\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "{\"error\": \"Password incorrect",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "{\"error\":\"User not found\"}",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "{\"error\":\"Could not create Token\"}",
                         "schema": {
                             "type": "string"
                         }
